# EFAA

./: .gitignore  Dev.md  README.md  README_en.md  main.py  main_oks.py  main_oks_debug.py  pyproject.toml  requirements.txt
backend/: README.md  api.md  main.py
backend/tasks/: shopping_strategy.json  task.json
backend/tasks/daily/: credit_points.py  credit_shop.py  tijiang.py
backend/tasks/run/: run.py
backend/utils/click/: click.py  config.json
backend/utils/connect/: connect.py
backend/utils/keyboard/: keyboard.py
backend/utils/ocr/: ocr.py  ocr_icon.py
frontend/: cspell.config.ts  cspell.json  eslint.config.js  index.html  knip.config.ts  package.json  tsconfig.json  vite.config.ts
frontend/.cursor/rules/: agent-rules.md
frontend/src/: frontend.tsx  index.html  main.tsx  vite-env.d.ts
frontend/src/common/api/: automation.ts  index.ts  settings.ts  tasks.ts
frontend/src/common/request/: index.ts
frontend/src/common/request/middlewares/: base-url.ts  throw-error.ts
frontend/src/components/: SideBar.tsx
frontend/src/core/functional/: api-center.ts  async.ts  delegate.ts
frontend/src/core/request/: model.ts  request-hub.ts
frontend/src/styles/: global.css  index.css  sidebar.css
frontend/src/views/dashboard/: dashboard.tsx
frontend/src/views/dashboard/components/: action-button.tsx  header.tsx  section-header.tsx  tag.tsx
frontend/src/views/dashboard/help/: help.tsx
frontend/src/views/dashboard/help/components/: code-block.tsx  doc-content.tsx  doc-meta.tsx  info-box.tsx  markdown-content.tsx  step-list.tsx  table-of-contents.tsx
frontend/src/views/dashboard/help/utils/: heading-id.ts
frontend/src/views/dashboard/news/: news.tsx
frontend/src/views/dashboard/news/components/: news-card.tsx  search-bar.tsx
frontend/src/views/dashboard/portal/: portal.tsx
frontend/src/views/dashboard/portal/components/: dev-log-card.tsx
frontend/src/views/dashboard/settings/: settings.tsx
frontend/src/views/dashboard/settings/cards/: adb-connection-card.tsx  advanced-settings-card.tsx  basic-info-card.tsx  general-options-card.tsx  notification-card.tsx  path-settings-card.tsx  shopping-strategy-card.tsx
frontend/src/views/dashboard/settings/components/: card.tsx  checkbox.tsx  form-field.tsx  password-input.tsx  secondary-button.tsx  select.tsx  text-input.tsx
frontend/src/views/dashboard/sidebar/: context.tsx  sidebar.tsx
frontend/src/views/dashboard/tasks/: tasks.tsx
frontend/src/views/dashboard/tasks/components/: action-button.tsx  task-item.tsx  task-list.tsx  terminal.tsx
resource/: config.py
resource/tasks/: MyOneTimeTask.py  MyOneTimeWithAGroup.py  MyOneTimeWithAGroup2.py  MyOneTimeWithBGroup.py
resource/ui/: MyTab.py
scripts/: commit.bat  commit.js  commit.sh  dev.bat
