[project]
name = "efaa"
version = "0.1.0"
description = "MAA在塔卫二时期的再旅者……"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    # --- 核心框架与工具---
    "ok-script==1.0.16",
    "onnxocr-ppocrv4==0.0.5",
    "opencv-python==4.12.0.88",      
    "openvino==2025.2.0",             
    "pyappify==1.0.2",
    "playwright==1.57.0",             
    "pythonnet==3.0.5",               
    "pywebview==6.1",                 
    
    # --- GUI 相关 ---
    "pyside6==6.9.1",
    "pyside6-addons==6.9.1",
    "pyside6-essentials==6.9.1",
    "pyside6-fluent-widgets==1.8.3",
    "pysidesix-frameless-window==0.7.3",
    "shiboken6==6.9.1",
    "darkdetect==0.8.0",

    # --- 系统与底层交互 ---
    "pywin32==311",
    "psutil==7.0.0",                  
    "comtypes==1.4.11",               
    "pycaw==20240210",
    "pydirectinput==1.0.4",
    "mouse==0.7.1",                   
    "clr-loader==0.2.10",             
    "cffi==2.0.0",                    
    "greenlet==3.3.0",                

    # --- 数据处理与算法 ---
    "numpy==2.2.6",                   
    "shapely==2.1.1",                 
    "pyclipper==1.3.0.post6",         
    "pillow==11.3.0",                 
    "packaging==25.0",

    # --- 网络与基础库 ---
    "requests==2.32.4",               
    "urllib3==2.5.0",                 
    "certifi==2025.7.14",             
    "charset-normalizer==3.4.2",      
    "idna==3.10",                     
    "typing-extensions==4.14.1",      
    "openvino-telemetry==2025.2.0",
    "proxy-tools==0.1.0",             
    "pycparser==2.23",                
    "pyee==13.0.0",                   
    
    # "adbutils==2.11.0",             # 模拟器可选依赖
]